# stcp-api

./: .gitignore  Dockerfile  LICENSE  README.md  Spacefile  main.py  pyproject.toml  requirements.txt
